# cxx-container-testing

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  go.mod  go.sum  makedb-new.sh  makedb.sh  plotting.go  poac.toml  run.sh  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
data/: huge-type-pushback.csv  large-type-pushback.csv  medium-type-pushback.csv  monster-type-pushback.csv  pushback.csv  small-type-pushback.csv
data/destroy/: NonTrivialMedium.csv  NonTrivialMovable.csv  NonTrivialMovableNoexcept.csv  TrivialHugeType.csv  TrivialLargeType.csv  TrivialMediumType.csv  TrivialMonsterType.csv  TrivialSmallType.csv
data/linear-search/: NonTrivialMedium.csv  NonTrivialMovable.csv  NonTrivialMovableNoexcept.csv  TrivialHugeType.csv  TrivialLargeType.csv  TrivialMediumType.csv  TrivialMonsterType.csv  TrivialSmallType.csv
data/linearsearch/: TrivialHugeType.csv  TrivialLargeType.csv  TrivialMediumType.csv  TrivialMonsterType.csv  TrivialSmallType.csv
data/push-back/: NonTrivialMedium.csv  NonTrivialMovable.csv  NonTrivialMovableNoexcept.csv  TrivialHugeType.csv  TrivialLargeType.csv  TrivialMediumType.csv  TrivialMonsterType.csv  TrivialSmallType.csv
data/push-front/: NonTrivialMedium.csv  NonTrivialMovable.csv  NonTrivialMovableNoexcept.csv  TrivialHugeType.csv  TrivialLargeType.csv  TrivialMediumType.csv  TrivialMonsterType.csv  TrivialSmallType.csv
data/pushback/: HugeType.csv  LargeType.csv  MediumType.csv  (+7 more)
include/: benchmark.hpp  cli.hpp  concepts.hpp  csv-writer.hpp  makers.hpp  plot.hpp  runners.hpp  tests.hpp  types.hpp  utils.hpp
src/: main.cpp
(+40 files in other folders)
